<resources>
    <string name="app_name">AlphasiaTalk Helper</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main_iwant_male1">MainIWantMale1</string>
    <string name="title_activity_main_activity2">MainActivity2Activity</string>
    <string name="title_activity_main_ifeel_male1">MainIFeelMale1</string>
    <string name="title_activity_main_food1">MainFood1</string>
    <string name="title_activity_main_ifeel_male2">MainIFeelMale2</string>
    <string name="title_activity_main_iwant_male2">MainIWantMale2</string>
    <string name="title_activity_main_iwant_male3">MainIWantMale3</string>
    <string name="title_activity_main_food2">MainFood2</string>
    <string name="title_activity_main_food3">MainFood3</string>
    <string name="title_activity_main_part1">MainPart1</string>
    <string name="title_activity_main_drink_hot1">MainDrinkHot1</string>
    <string name="title_activity_main_go1">MainGo1</string>
    <string name="title_activity_main_part_male1">MainPartMale1</string>
    <string name="title_activity_main_desssert1">MainDesssert1</string>
    <string name="title_activity_main_part_male2">MainPartMale2</string>
    <string name="title_activity_main_part_male3">MainPartMale3</string>
    <string name="title_activity_main_dessert2">MainDessert2</string>
    <string name="title_activity_main_fruit1">MainFruit1</string>
    <string name="title_activity_main_fruit2">MainFruit2</string>
    <string name="title_activity_main_cold1">MainCold1</string>
    <string name="title_activity_main_cold2">MainCold2</string>
    <string name="title_activity_main_frappe1">MainFrappe1</string>
    <string name="title_activity_drawing">Drawing</string>
    <string name="title_activity_add_new_item">addNewItem</string>
    <string name="title_activity_result_display">ResultDisplay</string>
    <string name="title_activity_sos_notification">SosNotification</string>
    <string name="title_activity_record_carer_info">RecordCarerInfo</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="title_activity_picture_mode_menu">Category</string>
    <string name="title_activity_animation_mode">Animation</string>
    <string name="title_activity_drawing_mode">Draw</string>
    <string name="start_new">New</string>
    <string name="pen">Pen</string>
    <string name="erase">Erase</string>
    <string name="save">Save</string>
    <string name="send">Send</string>
    <string name="text">Text</string>
    <string name="color">Color</string>
    <string name="sml">Small</string>
    <string name="med">Medium</string>
    <string name="lrg">Large</string>
    <string name="new_page_title">New drawing</string>
    <string name="new_page_msg">Start new drawing (you will lose the current drawing)?</string>
    <string name="yes">Yes</string>
    <string name="cancle">Cancle</string>
    <string name="send_title">Share this image via</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="search_hint">Search pictures</string>
    <string name="title_activity_search">Search</string>
    <string name="no_results">not found</string>
    <string name="language_change">language switch</string>
    <string name="thai">TH</string>
    <string name="english">EN</string>
    <string name="menu_picture">Gallery</string>
    <string name="menu_animation">Animation</string>
    <string name="menu_about_us">About us</string>
    <string name="menu_draw">Draw</string>
    <string name="menu_fav">My Favorite</string>
    <string name="menu_howto">Guide</string>
    <string name="title_activity_picture_detail">PictureDetailActivity</string>
    <string name="title_activity_picture_selection">Pictures</string>
    <string name="delete">Del</string>
    <string name="enter">Enter</string>
    <string name="title_activity_sentence">Sentence</string>
    <string name="OK">OK</string>
    <string name="warning">Warning</string>
    <string name="SVOX">Please install SVOX, Thai text to speech.</string>
    <string name="title_activity_about_us">About Us</string>
    <string name="text_typing">Please type your message</string>
    <string name="title_activity_adding_person">Add a Person</string>
    <string name="name">Name</string>
    <string name="thai_lang">Thai</string>
    <string name="eng_lang">English</string>
    <string name="description">Description</string>
    <string name="father">father</string>
    <string name="mother">mother</string>
    <string name="me">me</string>
    <string name="o_brother">brother</string>
    <string name="y_brother">brother</string>
    <string name="o_sister">sister</string>
    <string name="y_sister">sister</string>
    <string name="title_activity_picture_categoru_manu">PictureCategoruManuActivity</string>
    <string name="menu_setting">Setting</string>
    <string name="sos">SOS</string>
    <string name="menu_miscellaneous">Tools</string>
    <string name="menu_family_and_friend">Family &amp; Friends</string>
    <string name="menu_daily">Daily life</string>
    <string name="menu_hurt">Hurt</string>
    <string name="menu_help">Need help</string>
    <string name="title_activity_miscellaneous">MiscellaneousActivity</string>
    <string name="add_to_fav">Successfully added to favorite</string>
    <string name="title_activity_tutorial_menu">TutorialMenuActivity</string>
    <string name="menu_tutorial">Tutorial</string>
    <string name="menu_test">Lesson</string>
    <string name="title_activity_lesson">LessonActivity</string>
    <string name="title_activity_tutorial">TutorialActivity</string>
    <string name="title_activity_gallery">GalleryActivity</string>
    <string name="add_to_normal">Successfully added pictures to normal mode</string>
    <string name="del_to_normal">Successfully deleted pictures from normal mode</string>
    <string name="title_activity_record_info">RecordInfo</string>
    <string name="title_activity_show_information">ShowInformation</string>
    <string name="title_activity_main_food_cat">MainFoodCat</string>
    <string name="title_activity_main_drink_cat">MainDrinkCat</string>
    <string name="title_activity_recent_use">RecentUse</string>
    <string name="title_activity_main_language_select">MainLanguageSelect</string>
    <string name="title_activity_main_gender_select">MainGenderSelect</string>
    <string name="title_activity_recent">Recent</string>
    <string name="title_activity_main_activity_female">MainActivityFemale</string>
    <string name="title_activity_add_new_item_english">AddNewItemEnglish</string>
    <string name="title_activity_main_activity_male_eng">MainActivityMaleEng</string>
    <string name="title_activity_record_info_eng">RecordInfoEng</string>
    <string name="title_activity_main_dessert1_eng">MainDessert1Eng</string>
    <string name="title_activity_main_gender_select_eng">MainGenderSelectEng</string>
    <string name="title_activity_recond_info_female">RecondInfoFemale</string>
    <string name="title_activity_main_ifeel_female1">MainIFeelFemale1</string>
    <string name="title_activity_record_info_female">RecordInfoFemale</string>
    <string name="title_activity_main_ifeel_female2">MainIFeelFemale2</string>
    <string name="title_activity_main_part_female1">MainPartFemale1</string>
    <string name="title_activity_main_part_female2">MainPartFemale2</string>
    <string name="title_activity_main_part_female3">MainPartFemale3</string>
    <string name="title_activity_main_iwant_female1">MainIWantFemale1</string>
    <string name="title_activity_main_iwant_female2">MainIWantFemale2</string>
    <string name="title_activity_main_iwant_female3">MainIWantFemale3</string>
    <string name="title_activity_main_food_cat_female">MainFoodCatFemale</string>
    <string name="title_activity_main_food_female1">MainFoodFemale1</string>
    <string name="title_activity_main_food_female2">MainFoodFemale2</string>
    <string name="title_activity_main_food_female3">MainFoodFemale3</string>
    <string name="title_activity_main_drink_cat_female">MainDrinkCatFemale</string>
    <string name="title_activity_main_dessert_female1">MainDessertFemale1</string>
    <string name="title_activity_main_dessert_female2">MainDessertFemale2</string>
    <string name="title_activity_main_fruit_female1">MainFruitFemale1</string>
    <string name="title_activity_main_fruit_female2">MainFruitFemale2</string>
    <string name="title_activity_main_cold_female1">MainColdFemale1</string>
    <string name="title_activity_main_cold_female2">MainColdFemale2</string>
    <string name="title_activity_main_frappe_female1">MainFrappeFemale1</string>
    <string name="title_activity_main_drink_hot_female1">MainDrinkHotFemale1</string>
    <string name="title_activity_main_go_female1">MainGoFemale1</string>
    <string name="title_activity_sos_notification_female">SosNotificationFemale</string>
    <string name="title_activity_record_info_female_eng">RecordInfoFemaleEng</string>
    <string name="title_activity_main_iwant_male_eng1">MainIWantMaleEng1</string>
    <string name="title_activity_main_ifeel_male_eng1">MainIFeelMaleEng1</string>
    <string name="title_activity_main_ifeel_male_eng2">MainIFeelMaleEng2</string>
    <string name="title_activity_main_part_male_eng1">MainPartMaleEng1</string>
    <string name="title_activity_main_part_male_eng2">MainPartMaleEng2</string>
    <string name="title_activity_main_part_male_eng3">MainPartMaleEng3</string>
    <string name="title_activity_main_iwant_male_eng2">MainIWantMaleEng2</string>
    <string name="title_activity_main_iwant_male_eng3">MainIWantMaleEng3</string>
    <string name="title_activity_main_go_eng1">MainGoEng1</string>
    <string name="title_activity_main_food_cat_eng">MainFoodCatEng</string>
    <string name="title_activity_main_food_eng1">MainFoodEng1</string>
    <string name="title_activity_main_food_eng2">MainFoodEng2</string>
    <string name="title_activity_main_food_eng3">MainFoodEng3</string>
    <string name="title_activity_main_fruit_eng1">MainFruitEng1</string>
    <string name="title_activity_main_fruit_eng2">MainFruitEng2</string>
    <string name="title_activity_main_dessert_eng1">MainDessertEng1</string>
    <string name="title_activity_main_dessert_eng2">MainDessertEng2</string>
    <string name="title_activity_main_drink_cat_eng">MainDrinkCatEng</string>
    <string name="title_activity_main_drink_cold_eng1">MainDrinkColdEng1</string>
    <string name="title_activity_main_cold_eng1">MainColdEng1</string>
    <string name="title_activity_main_cold_eng2">MainColdEng</string>
    <string name="title_activity_main_drink_hot_eng1">MainDrinkHotEng1</string>
    <string name="title_activity_main_frappe_eng1">MainFrappeEng1</string>
    <string name="title_activity_main_activity_female_eng">MainActivityFemaleEng</string>
    <string name="title_activity_main_iwant_female_eng">MainIWantFemaleEng</string>
    <string name="title_activity_main_iwant_female_eng1">MainIWantFemaleEng1</string>
    <string name="title_activity_main_iwant_female_eng2">MainIWantFemaleEng2</string>
    <string name="title_activity_main_iwant_female_eng3">MainIWantFemaleEng3</string>
    <string name="title_activity_main_ifeel_female_eng1">MainIFeelFemaleEng1</string>
    <string name="title_activity_main_ifeel_female_eng2">MainIFeelFemaleEng2</string>
    <string name="title_activity_main_part_female_eng1">MainPartFemaleEng1</string>
    <string name="title_activity_main_part_female_eng2">MainPartFemaleEng2</string>
    <string name="title_activity_main_part_female_eng3">MainPartFemaleEng3</string>
    <string name="title_activity_main_go_female_eng1">MainGoFemaleEng1</string>
    <string name="title_activity_main_food_cat_female_eng">MainFoodCatFemaleEng</string>
    <string name="title_activity_main_fruit_female_eng1">MainFruitFemaleEng1</string>
</resources>