<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/lightblue">

    <!--<LinearLayout
        android:layout_width="1215dp"
        android:layout_height="627dp"
        android:orientation="horizontal"
        android:id="@+id/drawer"
        android:background="@color/white"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/linearLayout"
        android:layout_toEndOf="@+id/linearLayout">

        </LinearLayout>-->

    <com.example.musicmanpop.aphasiatalkhelper.DrawingView
        android:id="@+id/drawer"
        android:layout_width="1220dp"
        android:layout_height="200dp"
        android:background="#FFFFFFFF"
        android:paddingLeft="3dp"
        android:paddingRight="3dp"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="-100dp"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/linearLayout1"
        android:layout_toRightOf="@+id/linearLayout1"
        android:layout_alignBottom="@+id/linearLayout1" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#FFCCCCCC"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="100dp"
        android:layout_toStartOf="@+id/drawer">

        <ImageButton
            android:id="@+id/new_page"
            android:layout_width="40dp"
            android:layout_height="45dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.1"
            android:contentDescription="@string/start_new"
            android:onClick="newPage"
            android:scaleType="centerCrop"
            android:src="@drawable/new_page"
            android:background="@null"
            android:padding="10dp"/>

        <ImageButton
            android:id="@+id/text"
            android:layout_width="40dp"
            android:layout_height="45dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.1"
            android:contentDescription="@string/text"
            android:onClick="typeText"
            android:scaleType="centerCrop"
            android:src="@drawable/text"
            android:background="@null"
            android:padding="10dp"/>

        <ImageButton
            android:id="@+id/pen"
            android:layout_width="40dp"
            android:layout_height="45dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.1"
            android:contentDescription="@string/pen"
            android:onClick="choosePen"
            android:scaleType="centerCrop"
            android:src="@drawable/pen"
            android:background="@null"
            android:padding="10dp"/>

        <ImageButton
            android:id="@+id/eraser"
            android:layout_width="40dp"
            android:layout_height="45dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.1"
            android:contentDescription="@string/erase"
            android:onClick="chooseEraser"
            android:scaleType="centerCrop"
            android:src="@drawable/eraser"
            android:background="@null"
            android:padding="10dp"/>

        <ImageButton
            android:id="@+id/save"
            android:layout_width="40dp"
            android:layout_height="45dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.1"
            android:contentDescription="@string/save"
            android:onClick="saveImage"
            android:scaleType="centerCrop"
            android:src="@drawable/save"
            android:background="@null"
            android:padding="10dp"/>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#FFCCCCCC"
        android:layout_below="@+id/linearLayout"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:id="@+id/paint_colors"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="#FFCCCCCC">

            <ImageButton
                android:layout_width="@dimen/color_btn"
                android:layout_height="@dimen/color_btn"
                android:layout_margin="2dp"
                android:background="#FF000000"
                android:contentDescription="@string/color"
                android:onClick="paintClicked"
                android:src="@drawable/paint"
                android:tag="#FF000000"/>

            <ImageButton
                android:layout_width="@dimen/color_btn"
                android:layout_height="@dimen/color_btn"
                android:layout_margin="2dp"
                android:background="#FF666666"
                android:contentDescription="@string/color"
                android:onClick="paintClicked"
                android:src="@drawable/paint"
                android:tag="#FF666666" />

            <ImageButton
                android:layout_width="@dimen/color_btn"
                android:layout_height="@dimen/color_btn"
                android:layout_margin="2dp"
                android:background="#FF663300"
                android:contentDescription="@string/color"
                android:onClick="paintClicked"
                android:src="@drawable/paint"
                android:tag="#FF663300" />

            <!--<ImageButton
                android:layout_width="@dimen/color_btn"
                android:layout_height="@dimen/color_btn"
                android:layout_margin="2dp"
                android:background="#FF660000"
                android:contentDescription="@string/color"
                android:onClick="paintClicked"
                android:src="@drawable/paint"
                android:tag="#FF660000"
                 />-->

            <ImageButton
                android:layout_width="@dimen/color_btn"
                android:layout_height="@dimen/color_btn"
                android:layout_margin="2dp"
                android:background="#FFFF0000"
                android:contentDescription="@string/color"
                android:onClick="paintClicked"
                android:src="@drawable/paint"
                android:tag="#FFFF0000" />

            <ImageButton
                android:layout_width="@dimen/color_btn"
                android:layout_height="@dimen/color_btn"
                android:layout_margin="2dp"
                android:background="#FFFF6600"
                android:contentDescription="@string/color"
                android:onClick="paintClicked"
                android:src="@drawable/paint"
                android:tag="#FFFF6600" />

            <ImageButton
                android:layout_width="@dimen/color_btn"
                android:layout_height="@dimen/color_btn"
                android:layout_margin="2dp"
                android:background="#FFFFFF00"
                android:contentDescription="@string/color"
                android:onClick="paintClicked"
                android:src="@drawable/paint"
                android:tag="#FFFFFF00" />

            <ImageButton
                android:layout_width="@dimen/color_btn"
                android:layout_height="@dimen/color_btn"
                android:layout_margin="2dp"
                android:background="#FF33CC00"
                android:contentDescription="@string/color"
                android:onClick="paintClicked"
                android:src="@drawable/paint"
                android:tag="#FF33CC00" />

            <ImageButton
                android:layout_width="@dimen/color_btn"
                android:layout_height="@dimen/color_btn"
                android:layout_margin="2dp"
                android:background="#FF006600"
                android:contentDescription="@string/color"
                android:onClick="paintClicked"
                android:src="@drawable/paint"
                android:tag="#FF006600" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <!--<ImageButton
                android:layout_width="@dimen/color_btn"
                android:layout_height="@dimen/color_btn"
                android:layout_margin="2dp"
                android:background="#FF00CC99"
                android:contentDescription="@string/color"
                android:onClick="paintClicked"
                android:src="@drawable/paint"
                android:tag="#FF00CC99" />-->

            <ImageButton
                android:layout_width="@dimen/color_btn"
                android:layout_height="@dimen/color_btn"
                android:layout_margin="2dp"
                android:background="#FF00BBFF"
                android:contentDescription="@string/color"
                android:onClick="paintClicked"
                android:src="@drawable/paint"
                android:tag="#FF00BBFF" />

            <ImageButton
                android:layout_width="@dimen/color_btn"
                android:layout_height="@dimen/color_btn"
                android:layout_margin="2dp"
                android:background="#FF000099"
                android:contentDescription="@string/color"
                android:onClick="paintClicked"
                android:src="@drawable/paint"
                android:tag="#FF000099" />

            <ImageButton
                android:layout_width="@dimen/color_btn"
                android:layout_height="@dimen/color_btn"
                android:layout_margin="2dp"
                android:background="#FF6600CC"
                android:contentDescription="@string/color"
                android:onClick="paintClicked"
                android:src="@drawable/paint"
                android:tag="#FF6600CC" />

            <ImageButton
                android:layout_width="@dimen/color_btn"
                android:layout_height="@dimen/color_btn"
                android:layout_margin="2dp"
                android:background="#FFBB00FF"
                android:contentDescription="@string/color"
                android:onClick="paintClicked"
                android:src="@drawable/paint"
                android:tag="#FFBB00FF" />

            <ImageButton
                android:layout_width="@dimen/color_btn"
                android:layout_height="@dimen/color_btn"
                android:layout_margin="2dp"
                android:background="#FFFF00CC"
                android:contentDescription="@string/color"
                android:onClick="paintClicked"
                android:src="@drawable/paint"
                android:tag="#FFFF00CC" />

            <ImageButton
                android:layout_width="@dimen/color_btn"
                android:layout_height="@dimen/color_btn"
                android:layout_margin="2dp"
                android:background="#FFFF9999"
                android:contentDescription="@string/color"
                android:onClick="paintClicked"
                android:src="@drawable/paint"
                android:tag="#FFFF9999" />

            <ImageButton
                android:layout_width="@dimen/color_btn"
                android:layout_height="@dimen/color_btn"
                android:layout_margin="2dp"
                android:background="#FFFFCC66"
                android:contentDescription="@string/color"
                android:onClick="paintClicked"
                android:src="@drawable/paint"
                android:tag="#FFFFCC66" />

            <ImageButton
                android:layout_width="@dimen/color_btn"
                android:layout_height="@dimen/color_btn"
                android:layout_margin="2dp"
                android:background="#FFFFFFFF"
                android:contentDescription="@string/color"
                android:onClick="paintClicked"
                android:src="@drawable/paint"
                android:tag="#FFFFFFFF"/>

        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/pen_selection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/linearLayout"
        android:layout_below="@+id/linearLayout"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="-180dp"
        android:background="#FFBFBFBF"
        android:orientation="horizontal" >
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/eraser_selection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="-120dp"
        android:layout_toRightOf="@+id/pen_selection"
        android:background="#FFBFBFBF"
        android:orientation="horizontal" >
    </RelativeLayout>

    <ImageButton
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:id="@+id/home"
        android:src="@drawable/home"
        android:background="@null"
        android:scaleType="fitCenter"

        android:layout_gravity="left"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_margin="10dp" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView2"
        android:src="@drawable/sos"
        android:layout_row="0"
        android:layout_column="5"
        android:layout_gravity="right"
        android:background="@null"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Drawing"
        android:id="@+id/textViewDrawing"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="50dp"
        android:layout_marginTop="20dp"/>



</RelativeLayout>